--- a/TareaExamen/Proyecto4/Proyecto4.tex
+++ b/TareaExamen/Proyecto4/Proyecto4.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{amssymb, amsmath}
+\usepackage{stackengine}
 \usepackage{graphicx}
 \usepackage{lipsum}
 \usepackage{dsfont}
@@ -210,12 +211,47 @@ includefoot]{geometry}
 
 \noindent 2.  Sea $f(x,y) = xe^{y^2} - ye^{x^2}$\\
 
+\begin{definition}[Plano tangente]
+	Sea $ f: \R^2 \to \R $ una función diferenciable en $ \vec{x_0} = (x_0, y_0) $. El plano tangente en $ \R^3 $ definido por la ecuación
+	\[ z = f(x_0, y_0) + \left[ \dfrac{\d f}{\d x} (x_0, y_0) \right](x - x_0) + \left[ \dfrac{\d f}{\d y}(x_0, y_0) \right](y-y_0) \]
+	Es llamado plano tangente a la gráfica de $ f $ en el punto $ (x_0,y_0) $
+\end{definition}
+\noindent a) Encuentre el plano tangente a la gráfica de $f$ en $(1, 2)$
 
-\noindent a) Encuentre el plano tangente a la gráfica de $f$ en $(1, 2)$\\
+\begin{align*}
+	z &= f(x_0, y_0) + \left[ \dfrac{\d f}{\d x} (x_0, y_0) \right](x - x_0) + \left[ \dfrac{\d f}{\d y}(x_0, y_0) \right](y-y_0) && \text{Planteando la ecuación}\\
+	z &= f(1, 2) + \left[ \dfrac{\d f}{\d x} (1, 2) \right](x - 1) + \left[ \dfrac{\d f}{\d y}(1, 2) \right](y-2) && \text{Observemos que } x_0 = 1, y_0 = 2\\
+	z &= (e^4-2e) + \left[ \dfrac{\d f}{\d x} (1, 2) \right](x - 1) + \left[ \dfrac{\d f}{\d y}(1, 2) \right](y-2) && \text{Evaluando } f(1,2)\\
+	z &= (e^4-2e) + \left[ \dfrac{\d }{\d x} (xe^{y^2} - ye^{x^2}) \right]\Bigr|_{\substack{(1, 2)}} (x - 1) + \left[ \dfrac{\d }{\d y}(xe^{y^2} - ye^{x^2}) \right]\Big|_{\substack{(1, 2)}}(y-2) && \text{Cambiando regla de correspondencia de } f\\
+	z &= (e^4-2e) + \left[ e^{y^2} - 2e^{x^2} xy \right]\Bigr|_{\substack{(1, 2)}} (x - 1) + \left[ 2xe^{y^2} y-e^{x^2} \right]\Big|_{\substack{(1, 2)}}(y-2) && \text{Con las parciales de } f\\
+	z &= (e^4-2e) + (-4e + e^4) (x - 1) + (4e^4-e)(y-2) && \text{Evaluando en el punto dado} \\
+	z &= e^4-2e + -4ex + e^4x+ 4e - e^4  + 4e^4y - ey -8e^4 +2e  && \text{Por distributividad }\\
+	z &= (e^4-4e)x +(4e^4-e)y-8e^4+4e && \text{Agrupando términos semejantes }
+\end{align*}
 
 \noindent b) ¿Qué punto sobre la superficie $z = x^2 -y^2$, tiene un plano tangente paralelo al plano tangente encontrado en la primer parte?\\
 
+Notemos que $ \vec{n} = (e^4-4e,4e^4-e,-1) $ es un vector normal en el plano del ejericicio anterior.
 
+Empleando $ z = x^2 - y^2 $ definamos una nueva función $ g: \R^2 \to \R $ como $ g(x,y) = x^2 - y^2 $.
+
+Por otra parte, veamos que en $ (x_0,y_0) $ la normal al plano tangente en el punto $ (x_0,y_0,g(x_0,y_0)) $ está definido como 
+\[ \vec{m} = \left( \dfrac{\d g}{\d x}(x_0, y_0), \dfrac{\d g}{\d y}(x_0,y_0),-1 \right) \]
+Esto último significa que nos fijaremos en los puntos $ (x_0,y_0) $ que cumplan \[ \vec{m} = \alpha\vec{n} \] con $ \alpha \in \R $, ahora obtengamos las derivadas parciales 
+\begin{align*}
+	\dfrac{\d g}{\d x}(x_0, y_0) &= \alpha(e^4-4e) && \text{Por  que estamos buscando puntos de esta forma}\\
+	\dfrac{\d g}{\d y}(x_0, y_0) &= \alpha(4e^4-e) && \text{ }\\
+\end{align*}
+\begin{align*}
+	\dfrac{\d g}{\d x}(x_0, y_0) &= (x^2)' && \text{ Por definición de }g\\
+	\dfrac{\d g}{\d y}(x_0, y_0) &= (-y^2)' && \text{ }\\
+	\dfrac{\d g}{\d x}(x_0, y_0) &= 2x && \text{Aplicando la derivada }\\
+	\dfrac{\d g}{\d y}(x_0, y_0) &= -2y && \text{ }
+\end{align*}
+Así, los puntos $ (x_0,y_0) $ que buscamos son de la forma 
+\[ (x_0,y_0) = \dfrac{\alpha}{2}(e^4-4e,e-4e^4) \iff (x_0,y_0) = \alpha(e^4-4e,e-4e^4) \]
+Tomemos $ \alpha = 1 $ entonces tenemos el punto
+\[ (e^4-4e,e-4e^4, -15e^2(e^6-1) ) \]
 \noindent 3.  Calcule el gradiente de las siguientes funciones:\\
 
 
@@ -310,8 +346,9 @@ Para ello, primero hallemos el vector velocidad
  	\pint{\vec{\gamma}, \vec{\gamma'}} & = 2t^3 && \text{Existencia del inverso aditivo en }\R \\
  \end{align*}
  \begin{center}
- Notemos que $ 2t^3 \neq 0 $\\
- $ \therefore \quad \vec{\gamma'}$ no es ortogonal a $ \vec{\gamma} $
+ Notemos que $ 2t^3 = 0 $\\
+ Esto sólo ocurre cuando $ t = 0 $
+ $ \therefore \quad \vec{\gamma'}$ sólo es ortogonal a $ \vec{\gamma} $ en $ t= 0 $
  \end{center}
 \begin{figure}[h!]
 	\centering
