--- a/TareaExamen/Proyecto4/Proyecto4.tex
+++ b/TareaExamen/Proyecto4/Proyecto4.tex
@@ -283,8 +283,39 @@ Tomemos $ \alpha = 1 $ entonces tenemos el punto
 	$ \therefore \nabla f(x,y,z) = e^{-(x^2 +y^2 +z^2)} ( -2x^2 +1, -2yx, -2zx ) $
 \end{center}
 \noindent b) $f(x,y,z) = \dfrac{xyz}{x^2 +y^2 +z^2}$\\
+\begin{align*}
+	\dfrac{\d f}{\d x} &= \dfrac{\d}{\d x} \left(\dfrac{xyz}{x^2 +y^2 +z^2}\right) && \text{Planteando la derivada parcial}\\
+	\dfrac{\d f}{\d x} &= \dfrac{ (x^2+y^2+z^2)\dfrac{\d}{\d x}(xyz) - xyz\dfrac{\d}{\d x}(x^2 + y^2 + z^2) }{(x^2 + y^2 + z^2)^2} && \text{Reglas de derivada de Calculo I}\\
+	\dfrac{\d f}{\d x} &= \dfrac{ (x^2+y^2+z^2)yz - xyz(2x) }{(x^2 + y^2 + z^2)^2} && \text{Derivando la parcial }\\
+	\dfrac{\d f}{\d x} &= \dfrac{ -x^2yz+y^3z+yz^3 }{(x^2 + y^2 + z^2)^2}&& \text{Sumando términos semejantes }\\
+	\\
+	\dfrac{\d f}{\d y} &= \dfrac{\d}{\d y} \left(\dfrac{xyz}{x^2 +y^2 +z^2}\right)&&\text{Planteando la derivada parcial}\\
+		\dfrac{\d f}{\d y} &= \dfrac{ (x^2+y^2+z^2)\dfrac{\d}{\d y}(xyz) - xyz\dfrac{\d}{\d y}(x^2 + y^2 + z^2) }{(x^2 + y^2 + z^2)^2} && \text{Reglas de derivada de Calculo I}\\
+	\dfrac{\d f}{\d y} &= \dfrac{ (x^2+y^2+z^2)xz - xyz(2y) }{(x^2 + y^2 + z^2)^2} && \text{Derivando la parcial }\\
+	\dfrac{\d f}{\d y} &= \dfrac{ x^3z-xy^2z+xz^3 }{(x^2 + y^2 + z^2)^2}&& \text{Sumando términos semejantes }\\
+	\\
+	\dfrac{\d f}{\d z} &= \dfrac{\d}{\d z} \left(\dfrac{xyz}{x^2 +y^2 +z^2}\right) && \text{Planteando la derivada parcial}\\
+		\dfrac{\d f}{\d z} &= \dfrac{ (x^2+y^2+z^2)\dfrac{\d}{\d z}(xyz) - xyz\dfrac{\d}{\d z}(x^2 + y^2 + z^2) }{(x^2 + y^2 + z^2)^2} && \text{Reglas de derivada de Calculo I}\\
+	\dfrac{\d f}{\d z} &= \dfrac{ (x^2+y^2+z^2)xy - xyz(2z) }{(x^2 + y^2 + z^2)^2} && \text{Derivando la parcial }\\
+	\dfrac{\d f}{\d z} &= \dfrac{ x^3y+xy^3-xyz^2 }{(x^2 + y^2 + z^2)^2}&& \text{Sumando términos semejantes }
+\end{align*}
+\[ \therefore \nabla f(x,y,z) = \dfrac{1}{(x^2 + y^2 + z^2)^2} \left(  yz(-x^2+y^2+z^2), xz(x^2-y^2+z^2), xy(x^2+y^2-z^2) \right) \]
 
-\noindent c) $f(x,y,z) = z^2e^x\cos(y)$\\
+\noindent c) $f(x,y,z) = z^2e^x\cos(y)$
+\begin{align*}
+	\dfrac{\d f}{\d x} &= \dfrac{\d}{\d x} z^2e^x\cos(y) &&\text{Planteando la parcial}\\
+	\dfrac{\d f}{\d x} &= z^2\cos(y)\dfrac{\d}{\d x} e^x &&\text{Porque la derivada es lineal y saca escalares}\\
+	\dfrac{\d f}{\d x} &= z^2\cos(y)e^x &&\text{Por nuestro curso de Cálculo I}\\
+	\\
+	\dfrac{\d f}{\d y} &= \dfrac{\d}{\d x} z^2e^x\cos(y) &&\text{Planteando la parcial}\\
+	\dfrac{\d f}{\d y} &= z^2e^x(-\sin(y)) &&\text{Por derivadas de trigonométricas}\\
+	\dfrac{\d f}{\d y} &= -z^2e^x\sin(y) &&\text{Asociando }
+\end{align*}
+\begin{align*}
+		\dfrac{\d f}{\d z} &= \dfrac{\d}{\d z} z^2e^x\cos(y) &&\text{Planteando la parcial}\\
+	\dfrac{\d f}{\d z} &= e^x\cos(y)2z &&\text{Por reglas de la derivada de exponentes}
+\end{align*}
+\[ \therefore \nabla f(x,y,z) = ze^x(z\cos(y), -z\sin(y), 2\cos(y)) \]
 
 
 
