--- a/TareaExamen/Proyecto4/Proyecto4.tex
+++ b/TareaExamen/Proyecto4/Proyecto4.tex
@@ -323,8 +323,30 @@ Tomemos $ \alpha = 1 $ entonces tenemos el punto
 
 
 \noindent a) $\vec{\gamma}(t) = (\sin(t), 4\cos(t))$, donde $0 \leq t \leq 2\pi$\\
+Sea sea $ t \in [0,2\pi] $, tomemos un ligero cambio de variable y así tenemos que:
+
+\begin{align*}
+x &= \sin(x)  \quad y= 4\cos(t)\\
+\dfrac{x^2 }{1^2}+ \dfrac{y^2}{4^2} &= 	\sin^2t + \cos^2t = 1
+\end{align*}
+y hace un par de semanas justo revisamos en clase que este tipo de cónicas son elipses, además podemos decir dónde se encuentran sus vértices, que es en $ (-1,0),(1,0),(0,4),(0,-4) $\\
 
 \noindent b) $\vec{\gamma}(t) = (2\sin(t), 4\cos(t))$, donde $0 \leq t \leq 2\pi$\\
+Sea $ t \in [0,\pi] $, tomemos un cambio de variables como $ x = 2\sin(t), \quad y= 4\cos(t) $ tenemos que:
+\[ \dfrac{x^2}{2^2} + \dfrac{y^2}{4^2} = 1 \quad\quad \sin^2(t) + \cos^2(t) = 1  \]
+Además de esta elipse podemos decir que sus vértices se encuentran en $ (\pm 2,0), (0,\pm 4) $
+
+\begin{figure}[h!]
+	\centering
+	\begin{subfigure}[b]{0.4\linewidth}
+		\includegraphics[width=\textwidth]{img/proyecto4_5.png}
+		\caption{Curva trazada por $ \vec{\gamma}(t) = (\sin(t), 4\cos(t))$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.4\linewidth}
+		\includegraphics[width=\textwidth]{img/Proyecto4_6.png}
+		\caption{Curva trazada por $ \vec{\gamma}(t)= (2\sin(t), 4\cos(t)) $}
+	\end{subfigure}
+\end{figure}
 
 \noindent c) $\vec{\gamma}(t) = (t\sin(t), t\cos(t), t)$, donde $ -4\pi \leq t \leq 4\pi$\\
 
@@ -409,7 +431,7 @@ Para ello, primero hallemos el vector velocidad
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.45\textwidth]{img/Proyecto4_2.png}
-	\caption{Claramente ambos vectores no son ortogonales}
+	\caption{Claramente ambos vectores no son ortogonales, sólo en el origen}
 \end{figure}
 \noindent c) Encuentre la recta tangente a $\vec{\gamma}(t_0)$,  $t_0 = 4\pi$
 \begin{definition}[Recta tangente]
