--- a/TareaExamen/Proyecto4/Proyecto4.tex
+++ b/TareaExamen/Proyecto4/Proyecto4.tex
@@ -331,6 +331,12 @@ x &= \sin(x)  \quad y= 4\cos(t)\\
 \end{align*}
 y hace un par de semanas justo revisamos en clase que este tipo de cónicas son elipses, además podemos decir dónde se encuentran sus vértices, que es en $ (-1,0),(1,0),(0,4),(0,-4) $\\
 
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{img/proyecto4_5.png}
+	\caption{Curva trazada por $ \vec{\gamma}(t) = (\sin(t), 4\cos(t))$}
+\end{figure}
+
 \noindent b) $\vec{\gamma}(t) = (2\sin(t), 4\cos(t))$, donde $0 \leq t \leq 2\pi$\\
 Sea $ t \in [0,\pi] $, tomemos un cambio de variables como $ x = 2\sin(t), \quad y= 4\cos(t) $ tenemos que:
 \[ \dfrac{x^2}{2^2} + \dfrac{y^2}{4^2} = 1 \quad\quad \sin^2(t) + \cos^2(t) = 1  \]
@@ -338,17 +344,36 @@ Además de esta elipse podemos decir que sus vértices se encuentran en $ (\pm 2
 
 \begin{figure}[h!]
 	\centering
-	\begin{subfigure}[b]{0.4\linewidth}
-		\includegraphics[width=\textwidth]{img/proyecto4_5.png}
-		\caption{Curva trazada por $ \vec{\gamma}(t) = (\sin(t), 4\cos(t))$}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.4\linewidth}
-		\includegraphics[width=\textwidth]{img/Proyecto4_6.png}
+		\includegraphics[width=0.5\textwidth]{img/Proyecto4_6.png}
 		\caption{Curva trazada por $ \vec{\gamma}(t)= (2\sin(t), 4\cos(t)) $}
-	\end{subfigure}
 \end{figure}
 
+\newpage
 \noindent c) $\vec{\gamma}(t) = (t\sin(t), t\cos(t), t)$, donde $ -4\pi \leq t \leq 4\pi$\\
+
+\begin{figure}[h!]
+	\centering
+	\begin{subfigure}[b]{0.3\linewidth}
+	\includegraphics[width=\textwidth]{img/Proyecto4_7.png}
+	\caption{Vista desde la perspectiva con el plano $ xy $}
+\end{subfigure}
+\begin{subfigure}[b]{0.3\linewidth}
+	\includegraphics[width=\textwidth]{img/Proyecto4_8.png}
+	\caption{Desde el plano $ zx $}
+\end{subfigure}
+\begin{subfigure}[b]{0.3\linewidth}
+	\includegraphics[width=\textwidth]{img/Proyecto4_9.png}
+	\caption{Vista desde el plano $ zy $}
+\end{subfigure}
+\begin{subfigure}[b]{0.5\linewidth}
+	\includegraphics[width=\textwidth]{img/Proyecto4_10.png}
+	\caption{Vista tridimensional en el espacio $ \R^3 $}
+\end{subfigure}
+	\caption{Curva trazada por $ \vec{\gamma}(t)= (t\sin(t), t\cos(t), t)$}
+\end{figure}
+Sobre esta trayectoria podemos decir que tiene forma de hélice, al menos porque así se define en el ejercicio 5 y por que vimos un ejemplo en clase, además se ve claramente que el radio de la hélice es la misma variable $ t $ y qe la distancia entre los lazos de dicha hélice es también $ t $ por lo que, con la herramienta adecuada podríamos describir su curvatura (pero no es el caso). En cada uno de los lados se puede ver cómo parece la gráfica de $ f(x) = x\cos(x)$ lo mismo con el seno.
+
+
 
 \newpage
 \noindent 5. El vector de posición para una partícula que se mueve sobre una hélice es: $$\vec{\gamma}(t) = (\sin(t), \cos(t), t^2)$$
