Reesctructurando los archivos
algunoas carpetas estaban desordenadas y algunos archivos no estaban siendo ignorados

Se cambia lo necesario en la útltima linea de gitignore para que no tome en cuenta los mensajes

--- a/Apuntes/contingencia/semana1.tex
+++ b/Apuntes/contingencia/semana1.tex
@@ -97,7 +97,7 @@ includefoot]{geometry}
 		Prof. Pedro Porras Flores\\
 		Ayud. Irving Hernández Rosas \\
 		\textbf{Tarea-examen I}\\[0.2cm]
-		Kevin Ariel Merino Peña\footnote{317031326}\\ [0.2cm]
+		\Large \textbf{Apuntes de clase} \footnote{317031326}\\ [0.2cm]
 	\end{center}
 	\vspace{-10pt}
 	\rule{19cm}{0.3mm}
