--- a/TareaExamen/Proyecto2/README.tex
+++ b/TareaExamen/Proyecto2/README.tex
@@ -50,8 +50,9 @@ Prof. Alejandro Hernández Mora\\[0.2cm]
 Ayud. Pablo Camacho González  \\ [0.2cm]
 Ayud. Lab. Luis Manuel Martínez Dámaso   \\ [0.2cm]
 \rule{17cm}{0.3mm}\\
-\textbf{Tarea 1}\\
-Kevin Ariel Merino Peña\footnote{317031326}\\
+\textbf{Tarea 2}\\
+\huge\textbf{Laberintos}\\[0.1cm]
+\normalsize Kevin Ariel Merino Peña\footnote{317031326}\\
 Armando Abraham Aquino Chapa\footnote{317058163}\\
 \end{center}
 \vspace{-10pt}
@@ -66,12 +67,18 @@ Armando Abraham Aquino Chapa\footnote{317058163}\\
 
 \begin{enumerate}
 
-\item Para ejecutar el programa posicionarse en el metodo main y compilar con todas las clases necesarias.
+\item Para ejecutar el programa posicionarse en el metodo \textbf{main} y compilar con todas las clases necesarias.
 
-\item La ruta por omision del archivo txt es \texttt{src/alumnos.txt}
+\item El programa ofrece dos opciones, en la primera se hace de manera aleatoria un laberinto de longitud $ 15 \ 15 $ cuya solución se muestra y va de $ (0,0)  \mapsto (14,14) $ por omisión.
 
-\item En la primera ejecución, luego de posicionarse en la carpeta src (dentro de su terminal), debe seleccionar la opción 1, para pedir que lea un nuevo archivo de texto y la ruta debe ser: alumnos.txt
+\item En la segunda opción se pemite al usuario ingresar los datos de longitud de su laberinto y además las casillas donde se iniciará y dónde teminará el recorrido
+
 \end{enumerate}
+\section*{Aclaraciones}
+\begin{itemize}
+	\item La cuenta de las casillas es a partir de 0 (\textit{i.e. } la primera casilla es $ (0,0) $) 
+	\item Si el largo del laberinto es $ n $ y el ancho del laberinto $ m $, entonces la última casilla es: \\$ (n-1,m-1) $
+\end{itemize}
 
 
 
