Añadí el archivo de derivadas y cambios en el readme principal

--- a/TareaExamen/proyecto5/Proyecto5.tex
+++ b/TareaExamen/proyecto5/Proyecto5.tex
@@ -103,11 +103,11 @@ includefoot]{geometry}
 	
 \noindent Realice los siguientes ejercicios, escribiendo el procedimiento claramente. Y recuerden que estos proyectos se entregan de manera individual en la plataforma de google classroom.\\
 
-% -----------------------------------------------------
-% Problema uno
-% -----------------------------------------------------
-\noindent1.  Verifique el primer caso de la regla de la cadena de la composición $ f\circ \vec{\gamma}$ para cada uno de los siguientes casos, esto es primero haga la composición y derive, y le luego use la regla de la cadena y vea que se llega al mismo resultado.\\
 
+\noindent1.  Verifique el primer caso de la regla de la cadena de la composición $ f\circ \vec{\gamma}$ para cada uno de los siguientes casos, esto es primero haga la composición y derive, y le luego use la regla de la cadena y vea que se llega al mismo resultado.\\
+\begin{theorem}[Regla de la cadena]
+	Sean $ U\subset \R^n $ y $ V \subset \R^m $
+\end{theorem}
 
 a) $f(x,y) = xy$, $\vec{\gamma}(t) =(e^t, \cos(t)) $.\\
 
@@ -116,8 +116,6 @@ b) $f(x,y) = xy$, $\vec{\gamma}(t) =(3t^2, t^3) $.\\
 c) $f(x,y) = (x^2 + y^2)\ln{\sqrt{x^2 + y^2}}$, $\vec{\gamma}(t) =(e^t, e^{-t}) $.\\
 
 d) $f(x,y) = xe^{x^2 + y^2}$, $\vec{\gamma}(t) =(t, -t) $.\\
-
-
 
 
 
